environments/production/applications/app01/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app01-compute
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app01-compute
  template:
    metadata:
      labels:
        app: app01-compute
    spec:
      containers:
        - name: app01
          image: ghcr.io/phelun/weekend-app01:e1443539f284b24b4eae01889990678e586fa45b
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              cpu: 500m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
